# drop-agent

./: .gitignore  README.md  pyproject.toml
docs/: backends.md
docs/superpowers/specs/: 2026-04-14-llama-cpp-metal-backend-design.md
droplet/: agent.py  backend.py  main.py
droplet/converters/: registry.py
