[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "droplet"
version = "0.1.0"
description = "DROP: Deep Research On Premise Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama",
    "openai",
    "requests",
    "pypdf",
    "openpyxl",
    "tiktoken",
    "prompt_toolkit",
    "gpt-oss",
    "wikipedia",
    "pymilvus",
    "milvus-lite",
    "aiohttp",
    "sentence-transformers",
    "rich",
    "pandas",
    "numpy",
    "camelot",
    "chardet<6.0.0",  # Pin chardet < 6.0.0 for requests compatibility
    "jupyter_client",
    "ipykernel",
    "tqdm",
]

[project.optional-dependencies]
metal = [
    "llama-cpp-python",
    "huggingface_hub",
]

[project.scripts]
droplet = "droplet.main:main"

[tool.setuptools.packages.find]
include = ["droplet*"]
